# anki-flash-feedback

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: build.py
src/anki_flash_feedback/: __init__.py  config.json  core.py  dialog.py  manager.py  manifest.json  overlay.py
tests/: conftest.py  test_core.py
