[project]
name = "anki-flash-feedback"
version = "1.0.0"
description = "Anki add-on: flash a colored overlay after each review answer"
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
files = ["src/anki_flash_feedback/core.py"]

[[tool.mypy.overrides]]
module = ["aqt.*", "PyQt6.*", "anki.*"]
ignore_missing_imports = true

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
